--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import '@/styles/globals.css'
+import '@fontsource-variable/league-spartan'
+import '@fontsource-variable/raleway'
 interface Props {
 	title: string
 	description: string
