--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
+:root {
+	/* Typografias */
+	--font-raleway: 'Raleway Variable', sans-serif;
+	--font-spartan: 'League Spartan Variable', sans-serif;
+}
+/*---- Typografias ----*/
+/* raleway-latin-wght-normal */
+@font-face {
+	font-family: 'Raleway Variable';
+	font-style: normal;
+	font-display: swap;
+	font-weight: 100 900;
+	src: url(@fontsource-variable/raleway/files/raleway-latin-wght-normal.woff2)
+		format('woff2-variations');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
+		U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
+		U+FFFD;
+}
+/* league-spartan-latin-wght-normal */
+@font-face {
+	font-family: 'League Spartan Variable';
+	font-style: normal;
+	font-display: swap;
+	font-weight: 100 900;
+	src: url(@fontsource-variable/league-spartan/files/league-spartan-latin-wght-normal.woff2)
+		format('woff2-variations');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
+		U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
+		U+FFFD;
+}
+
+@layer base {
+	body {
+		@apply font-spartan text-arsenic text-[14px] md:text-[16px];
+	}
+	img {
+		@apply h-full w-full object-cover;
+	}
+	.container {
+		@apply px-4 md:px-8 lg:px-12 xl:px-16;
+	}
+}
