Agregando fuentes typograficas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '@/components/layouts/Layout.astro'
+import { TypographyH1 } from '@/components/shared/TypographyH1'
 import { Button } from '@/components/ui/button'
 ---
 
 <Layout title="Home" description="Home page">
 	<h1>Welcome to Astro</h1>
-	<Button>Click me</Button></Layout
->
+	<Button>Click me</Button>
+	<TypographyH1>H1 Raleway Bold 50 - Letter spacing -2%</TypographyH1>
+</Layout>
